<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

    <TextView
            android:text="@string/slot1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/firstrm_id"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"
            android:fontFamily="@font/roboto" android:textSize="24sp" style="@style/whiteBox"
            android:textAlignment="center"
            app:layout_constraintBaseline_toBaselineOf="@+id/seconderm_id" app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toStartOf="@+id/seconderm_id"/>
    <TextView
            android:text="@string/slot3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/thidrm_id" android:textAlignment="textStart"
            android:textSize="24sp" android:fontFamily="@font/roboto"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBaseline_toBaselineOf="@+id/seconderm_id"
            app:layout_constraintStart_toEndOf="@+id/seconderm_id" app:layout_constraintHorizontal_bias="0.5"/>
    <TextView
            android:text="@string/parking"
            android:layout_width="110dp"
            android:layout_height="41dp"
            android:id="@+id/park_id" android:fontFamily="@font/roboto"
            android:textSize="30sp" android:textAlignment="center" android:textStyle="bold"
            android:layout_marginTop="40dp" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="140dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="40dp"
            app:layout_constraintHorizontal_bias="0.909"/>
    <TextView
            android:text="@string/slot2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/seconderm_id" android:textAlignment="center"
            android:textSize="24sp" android:fontFamily="@font/roboto"
            app:layout_constraintStart_toEndOf="@+id/firstrm_id" app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toStartOf="@+id/thidrm_id" android:layout_marginTop="48dp"
            app:layout_constraintTop_toBottomOf="@+id/park_id"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:text="@string/name"
            android:ems="10"
            android:id="@+id/nameip_id" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@+id/seconderm_id"
            app:layout_constraintBottom_toTopOf="@+id/ licenseip_id"
            android:layout_marginTop="8dp" android:textSize="24sp" android:fontFamily="@font/roboto"
            android:textAlignment="center" app:layout_constraintHorizontal_bias="0.528" android:autofillHints="" tools:targetApi="o"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:text="@string/license_plate"
            android:ems="10"
            android:id="@+id/ licenseip_id"
            app:layout_constraintTop_toBottomOf="@+id/nameip_id"
            app:layout_constraintBottom_toTopOf="@+id/brandip_id" android:textSize="24sp"
            android:textAlignment="center" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:fontFamily="@font/roboto"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:text="@string/brand"
            android:ems="10"
            android:id="@+id/brandip_id"
            app:layout_constraintTop_toBottomOf="@+id/ licenseip_id"
            android:fontFamily="@font/roboto" android:textSize="24sp" android:textAlignment="center"
            android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"/>
    <Button
            android:text="@string/update"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/updatebtn_id" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toStartOf="@+id/deletebtn_id"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/brandip_id"
            android:fontFamily="@font/roboto" android:textSize="24sp"/>
    <Button
            android:text="@string/delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/deletebtn_id" app:layout_constraintStart_toEndOf="@+id/updatebtn_id"
            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/brandip_id"
            android:fontFamily="@font/roboto" android:textSize="24sp"/>

</androidx.constraintlayout.widget.ConstraintLayout>